# tap-opentable

./: .gitignore  README.md  pyproject.toml  tox.ini
tap_opentable/: auth.py  client.py  pagination.py  tap.py
tap_opentable/schemas/: availability.json  menus.json  reservations.json  restaurants.json  reviews.json
tap_opentable/streams/: __init__.py  availability.py  menus.py  reservations.py  restaurants.py  reviews.py
